# scorekeeper2

./: .gitignore  Cargo.toml  README.md  database.sql
client/: index.html  package.json  vite.config.ts
client/src/: App.vue  main.ts
client/src/api/: api.ts  auth.ts  competition_events.ts  competitions.ts  events.ts  group_participation.ts  groups.ts  score_calculators.ts  scores.ts  season_competitions.ts  seasons.ts  teams.ts  users.ts
client/src/components/score_overview/: ScoreData.vue
client/src/helpers/: random.ts  sort.ts
client/src/router/: index.ts
client/src/stores/: auth.ts
client/src/views/: AboutView.vue  AccountView.vue  HomeView.vue  LoginView.vue  LogoutView.vue  ScoreEntryView.vue  ScoreOverviewView.vue  SetupView.vue  UserAdmin.vue
src/: config.rs  database.rs  main.rs
src/api/: auth.rs  competition_events.rs  competitions.rs  events.rs  group_participation.rs  groups.rs  mod.rs  score_calculators.rs  scores.rs  season_competitions.rs  seasons.rs  teams.rs  users.rs
src/calculator/: decimal.rs  mod.rs  script_context.rs
src/database/: auth.rs  competition_events.rs  competitions.rs  events.rs  group_participation.rs  groups.rs  mod.rs  score_calculators.rs  scores.rs  season_competitions.rs  seasons.rs  teams.rs  users.rs
src/helpers/: api_request_logging.rs  auth_extractor.rs  errors.rs  mod.rs
src/services/: audit.rs  auth.rs  competition_events.rs  competitions.rs  events.rs  group_participation.rs  groups.rs  mod.rs  score_calculators.rs  scores.rs  season_competitions.rs  seasons.rs  teams.rs  users.rs
(+11 files in other folders)
